@@ -645,6 +645,7 @@ foreach (@ARGV) {
 load_rcfile($system_rc,$rc_file);
 
 my @newlibdirs = ();
+my $did_c_already = 0;
 
 #parse command line options
 while (@ARGV) 
@@ -654,13 +655,20 @@ while (@ARGV)
 	#Get specific comics or don't get a specific comics
 	if (/-(c)$/i) {
 		if (@ARGV > 0) {
+		    if ($did_c_already) {
+		    	print STDERR "Please put all comic ids in one string after one".
+		    	"instance of -c. \n";
+		    	print STDERR "  Use -h for usage.\n";
+		    	exit 1;
+		    }
+		    $did_c_already = 1;
 		    my @ids = split(' ',shift(@ARGV));
 		    if ($1 eq 'c') {
 	            $user_specified_comics = 1;
-	            push(@selected_comics,@ids);
+	            @selected_comics = @ids;
 	        } else {
 	            $user_unspecified_comics = 1;
-	            push(@selected_comics,@ids);
+	            @selected_comics = @ids;
 		    }
 		} else {
 		    print STDERR "Need a space-delimitted list of comic id's.";
